tests/paczka1/small_fuzzy/89741331.err
Error in line 5: 8cvj38t8 S44 55,1
Error in line 11: 1GO A708 39,0
